refactor(storage): add player persistence revision column